# xiulian.skill

./: AGENTS.md  LICENSE  README.md  README_EN.md  SKILL.md  pyproject.toml
.cursor/rules/: vibecoding-skill.mdc
assets/prompts/: certificate-premium.prompt.md  realm-talisman.prompt.md  vibecoding-card.prompt.md  xiulian-card.prompt.md  xiuxian-card.prompt.md
docs/: card-lexicon.md  lexicon.md  promo.md
examples/: demo_codex_session.jsonl  demo_report.md
portrait_skill/: __init__.py  analyzer.py  cards.py  cli.py  insights.py  memory.py  renderer.py
tests/: test_cli_e2e.py  test_secondary_skill.py
vibecoding_skill/: __init__.py  analyzer.py  cards.py  cli.py  exporter.py  insights.py  memory.py  parsers.py  renderer.py  secondary_skill.py
