[project]
name = "xiulian-skill"
version = "0.1.0"
description = "Read agent transcripts, distill vibe coding ability, and issue a shareable cultivation card."
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[project.scripts]
xiulian-skill = "portrait_skill.cli:main"
xiuxian-skill = "portrait_skill.cli:main"
portrait-skill = "portrait_skill.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["portrait_skill"]
