[project]
name = "vibecoding-skill"
version = "0.1.0"
description = "Read code-agent traces, distill vibecoding ability, and generate a report, share card, and upgrade guidance."
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[project.scripts]
vibecoding-skill = "vibecoding_skill.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["vibecoding_skill"]
